serve a swagger file for each exposed api
